<resources>
    <string name="VUFORIA_INIT_ERROR_DEVICE_NOT_SUPPORTED">Failed to initialize Vuforia. This device is not supported.</string>
    <string name="VUFORIA_INIT_ERROR_NO_CAMERA_ACCESS">Failed to initialize Vuforia because the camera is not accessible. If using a webcam check that it is connected to a USB hub. If using either the phone camera or a webcam check that the application has the Camera permission.</string>
    <string name="VUFORIA_INIT_LICENSE_ERROR_CANCELED_KEY">This app license key has been canceled and may no longer be used. Please get a new license key.</string>
    <string name="VUFORIA_INIT_LICENSE_ERROR_INVALID_KEY">Invalid Vuforia App Key used. See the Vuforia Samples for comments on obtaining a Vuforia Key.</string>
    <string name="VUFORIA_INIT_LICENSE_ERROR_MISMATCH_KEY">Vuforia App key is not valid for this product. Please get a valid key, by logging into your account at developer.vuforia.com and choosing the right product type during project creation.</string>
    <string name="VUFORIA_INIT_LICENSE_ERROR_MISSING_KEY">Vuforia App key is missing. Please get a valid key, by logging into your account at developer.vuforia.com and creating a new project.</string>
    <string name="VUFORIA_INIT_LICENSE_ERROR_NO_NETWORK_PERMANENT">No network available. Please make sure you are connected to the Internet.</string>
    <string name="VUFORIA_INIT_LICENSE_ERROR_NO_NETWORK_TRANSIENT">Unable to contact server. Please try again later.</string>
    <string name="VUFORIA_INIT_LICENSE_ERROR_PRODUCT_TYPE_MISMATCH">Vuforia App key is not valid for this product. Please get a valid key, by logging into your account at developer.vuforia.com and choosing the right product type during project creation.</string>
    <string name="VUFORIA_INIT_LICENSE_ERROR_UNKNOWN_ERROR">Failed to initialize Vuforia.</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="about_app_version">App Version</string>
    <string name="about_build_time">App Build Time</string>
    <string name="about_library_version">Library Version</string>
    <string name="about_network_connection_info">Network Connection Info</string>
    <string name="about_network_protocol_version">Robot Wifi Protocol Version</string>
    <string name="buttonNameAdd">Add</string>
    <string name="buttonNameCancel">Cancel</string>
    <string name="buttonNameDone">Done</string>
    <string name="buttonNameFix">Fix</string>
    <string name="buttonNameScan">Scan</string>
    <string name="buttonNameSwap">Swap</string>
    <string name="choice_prompt">Which sensor is attached?</string>
    <string name="choice_prompt_analogOutput">Which sensor is attached?</string>
    <string name="default_port">0</string>
    <string name="ds_ui_portrait">Portrait</string>
    <string name="edit_controller">Edit Controller</string>
    <string name="file_activate_button">Activate</string>
    <string name="file_delete_button">Delete</string>
    <string name="file_edit_button">Edit</string>
    <string name="filename_editText">Filename</string>
    <string name="filler_text">lorem ipsum</string>
    <string name="input_name_hint">Enter device name here</string>
    <string name="input_name_label">Device name</string>
    <string name="key_ds_layout">ds_layout</string>
    <string name="name_prompt_text">Enter name</string>
    <string name="name_prompt_undertext">Device name</string>
    <string name="packageName">@string/packageNameDriverStation</string>
    <string name="packageNameDriverStation">com.qualcomm.ftcdriverstation</string>
    <string name="pairing_kind_title">Pairing Method</string>
    <string name="pref_app_category">pref_app_category</string>
    <string name="pref_app_category_rc">pref_app_category_rc</string>
    <string name="pref_app_theme">pref_app_theme</string>
    <string name="pref_app_theme_rc">pref_app_theme_rc</string>
    <string name="pref_app_version">pref_app_version</string>
    <string name="pref_app_version_rc">pref_app_version_rc</string>
    <string name="pref_build_time">pref_build_time</string>
    <string name="pref_build_time_rc">pref_build_time_rc</string>
    <string name="pref_debug_driver_station_logs">pref_debug_driver_station_logs</string>
    <string name="pref_device_name">pref_device_name</string>
    <string name="pref_device_name_rc">pref_device_name_rc</string>
    <string name="pref_launch_advanced_rc_settings">pref_launch_advanced_rc_settings</string>
    <string name="pref_launch_inspect_ds">pref_launch_inspect_ds</string>
    <string name="pref_launch_inspect_rc">pref_launch_inspect_rc</string>
    <string name="pref_launch_lynx_address_update">pref_launch_lynx_address_update</string>
    <string name="pref_launch_lynx_firmware_update">pref_launch_lynx_firmware_update</string>
    <string name="pref_launch_wifi_channel_edit">pref_launch_wifi_channel_edit</string>
    <string name="pref_launch_wifi_remembered_groups_edit">pref_launch_wifi_remembered_groups_edit</string>
    <string name="pref_lib_version">pref_lib_version</string>
    <string name="pref_lib_version_rc">pref_lib_version_rc</string>
    <string name="pref_match_logging_on_off">pref_match_logging_on_off</string>
    <string name="pref_match_logging_on_off_summary">Adds the ability to specify match numbers and store per-match log files in /sdcard/FIRST/matchlogs on the robot controller.</string>
    <string name="pref_match_logging_on_off_title">Match Logging</string>
    <string name="pref_network_connection_info">pref_network_connection_info</string>
    <string name="pref_network_connection_info_rc">pref_network_connection_info_rc</string>
    <string name="pref_network_protocol_version">pref_network_protocol_version</string>
    <string name="pref_network_protocol_version_rc">pref_network_protocol_version_rc</string>
    <string name="pref_pair_rc">pref_pair_rc</string>
    <string name="pref_pairing_kind">pref_pairing_kind</string>
    <string name="pref_pairing_kind_default">WifiDirect</string>
    <string name="pref_sound_on_off">pref_sound_on_off</string>
    <string name="pref_sound_on_off_rc">pref_sound_on_off_rc</string>
    <string name="pref_warn_about_2_4_ghz_band">pref_warn_about_2_4_ghz_band</string>
    <string name="pref_warn_about_mismatched_app_versions">pref_warn_about_mismatched_app_versions</string>
    <string name="pref_warn_about_outdated_firmware">pref_warn_about_outdated_firmware</string>
    <string name="prefcat_configure_ds">Driver Station Settings</string>
    <string name="prefcat_configure_robot">Robot Controller Settings</string>
    <string name="prefcat_logging">Logging</string>
    <string name="prefedit_app_theme_ds">Driver Station Color Scheme</string>
    <string name="prefedit_app_theme_rc">Robot Controller Color Scheme</string>
    <string name="prefedit_app_theme_summary_ds">Change the color scheme of the driver station. Will take effect on next app launch.</string>
    <string name="prefedit_app_theme_summary_rc">Change the color scheme of the robot controller. Note: the app will restart if the color scheme is changed</string>
    <string name="prefedit_change_wifi_channel">Change Wifi Direct Channel</string>
    <string name="prefedit_clear_remembered_groups_summary">Clears remembered Wifi Direct groups from the robot controller</string>
    <string name="prefedit_debug_driver_station_logs">Log Internal Events</string>
    <string name="prefedit_debug_driver_station_logs_summary">Record low-level internal events to the log. This may generate a large log volume.</string>
    <string name="prefedit_device_name_ds">Driver Station Name</string>
    <string name="prefedit_device_name_rc">Robot Controller Name</string>
    <string name="prefedit_device_name_summary_ds">Change the name of the driver station</string>
    <string name="prefedit_device_name_summary_rc">Change the name of the robot controller</string>
    <string name="prefedit_edit_wifi_channel_summary">Changes the Wifi channel on which the phone-based robot controller operates</string>
    <string name="prefedit_launch_inspect_ds">Inspect Driver Station</string>
    <string name="prefedit_launch_inspect_ds_summary">Creates a self-inspection report for the driver station</string>
    <string name="prefedit_launch_inspect_rc">Inspect Robot Controller</string>
    <string name="prefedit_launch_inspect_rc_summary">Creates a self-inspection report for the robot controller</string>
    <string name="prefedit_pair_rc">Pair with Robot Controller</string>
    <string name="prefedit_pair_rc_summary">Change the robot controller this driver station is paired with</string>
    <string name="prefedit_remembered_groups">Clear Wifi Direct Groups</string>
    <string name="prefedit_sound_on_off">Sound</string>
    <string name="prefedit_sound_on_off_summary_ds">Turn driver station app sounds on or off</string>
    <string name="prefedit_sound_on_off_summary_rc">Turn robot controller app sounds on or off</string>
    <string name="readOnlyConfigFeedback">read-only</string>
    <string name="servo_controller_name_prompt">Enter the name for this servo controller here</string>
    <string name="summaryAdvancedRCSettings">Change advanced settings of the robot controller</string>
    <string name="summaryLynxAddressUpdate">Change the persistent hub address of one or more Expansion Hubs</string>
    <string name="summaryLynxFirmwareUpdate">Updates the firmware of all USB-attached Expansion Hubs</string>
    <string name="summaryWarnAbout2_4GhzBand">Show warning when the Robot Controller access point is on the 2.4 GHz WiFi band, and both the Robot Controller and Driver Station support 5 GHz</string>
    <string name="summaryWarnAboutMismatchedAppVersions">Show warning when the Robot Controller and Driver Station are not the same version</string>
    <string name="summaryWarnAboutOutdatedHubs">Show warning when outdated REV Hub firmware is detected</string>
    <string name="titleAdvancedRCSettings">Advanced Settings</string>
    <string name="titleAdvancedRCSettings2">Advanced Robot Controller Settings</string>
    <string name="titleLynxFirmwareUpdate">REV Hub Firmware Update</string>
    <string name="titleLynxModuleAddressUpdate">Expansion Hub Address Change</string>
    <string name="titleWarnAbout2_4GhzBand">2.4 GHz WiFi warning</string>
    <string name="titleWarnAboutMismatchedAppVersions">Mismatched apps warning</string>
    <string name="titleWarnAboutOutdatedHubs">Old firmware warning</string>
    <string name="unavailable">unavailable</string>
</resources>