<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory
        android:title="@string/filler_text"
        android:key="@string/pref_app_category_rc">
        <org.firstinspires.ftc.robotcore.internal.ui.LabelTextPreference
            android:title="@string/about_app_version"
            android:key="@string/pref_app_version_rc"
            android:defaultValue="@string/unavailable" />
        <org.firstinspires.ftc.robotcore.internal.ui.LabelTextPreference
            android:title="@string/about_library_version"
            android:key="@string/pref_lib_version_rc"
            android:defaultValue="@string/unavailable" />
        <org.firstinspires.ftc.robotcore.internal.ui.LabelTextPreference
            android:title="@string/about_network_protocol_version"
            android:key="@string/pref_network_protocol_version_rc"
            android:defaultValue="@string/unavailable" />
        <org.firstinspires.ftc.robotcore.internal.ui.LabelTextPreference
            android:title="@string/about_network_connection_info"
            android:key="@string/pref_network_connection_info_rc"
            android:defaultValue="@string/unavailable" />
        <org.firstinspires.ftc.robotcore.internal.ui.LabelTextPreference
            android:title="@string/about_build_time"
            android:key="@string/pref_build_time_rc"
            android:defaultValue="@string/unavailable" />
    </PreferenceCategory>
</PreferenceScreen>