<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:keepScreenOn="true"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <EditText
        android:textSize="18.0sp"
        android:textStyle="bold"
        android:id="@id/controller_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/filler_text"
        android:hint="@string/name_prompt_text"
        android:maxLength="200"
        android:inputType="text" />

    <TextView
        android:id="@id/serialNumber"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8.0dip" />

    <TextView
        android:id="@id/controller_name_prompt_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8.0dip"
        android:text="@string/servo_controller_name_prompt"
        android:layout_marginStart="8.0dip" />
</LinearLayout>