<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout android:orientation="vertical"
        android:padding="0.0dip"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:keepScreenOn="true"
        xmlns:android="http://schemas.android.com/apk/res/android">

        <TextView
            android:textSize="12.0sp"
            android:id="@id/portNumber"
            android:visibility="invisible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_port" />

        <RelativeLayout
            android:id="@id/dropdown_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <Spinner
                android:entries="@array/choice_array_legacy_module"
                android:id="@id/choiceSpinner"
                android:background="@android:drawable/btn_dropdown"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:prompt="@string/choice_prompt"
                android:spinnerMode="dropdown" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@id/editTextResult"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name_prompt_text"
                android:maxLength="200"
                android:inputType="text" />

            <TextView
                android:id="@id/titleTextView"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5.0dip"
                android:text="@string/name_prompt_undertext"
                android:layout_below="@id/editTextResult"
                android:paddingStart="10.0dip" />

            <Button
                android:layout_gravity="end"
                android:id="@id/edit_controller_btn"
                android:visibility="invisible"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="0.0dip"
                android:text="@string/edit_controller"
                android:layout_below="@id/titleTextView"
                android:onClick="editController_portALL"
                android:paddingStart="10.0dip"
                android:paddingEnd="10.0dip" />
        </RelativeLayout>
    </LinearLayout>
</merge>