<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical"
    android:id="@id/file_info_layout"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:animateLayoutChanges="true"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TableLayout
        android:id="@id/file_buttons"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="1"
        android:shrinkColumns="0">

        <TableRow
            android:id="@id/table_header"
            android:padding="5.0dip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="vertical"
                android:id="@id/linearLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:textSize="20.0sp"
                    android:id="@id/filename_editText"
                    android:layout_width="300.0dip"
                    android:layout_height="wrap_content"
                    android:text="@string/filename_editText"
                    android:maxLength="200" />

                <TextView
                    android:textSize="12.0sp"
                    android:id="@id/configIsReadOnlyFeedback"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/readOnlyConfigFeedback" />

                <LinearLayout
                    android:orientation="horizontal"
                    android:id="@id/horizontalButtons"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <Button
                        android:textSize="16.0sp"
                        android:id="@id/file_edit_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/file_edit_button"
                        android:onClick="onFileEditButtonPressed"
                        android:layout_marginEnd="3.0dip" />

                    <Button
                        android:textSize="16.0sp"
                        android:id="@id/file_activate_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/file_activate_button"
                        android:onClick="onFileActivateButtonPressed"
                        android:layout_marginEnd="3.0dip" />

                    <Button
                        android:textSize="16.0sp"
                        android:id="@id/file_delete_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/file_delete_button"
                        android:onClick="onFileDeleteButtonPressed"
                        android:layout_marginEnd="3.0dip" />
                </LinearLayout>
            </LinearLayout>
        </TableRow>
    </TableLayout>
</LinearLayout>